# libdxfrw

./: CMakeLists.txt
dwg2dxf/: dx_iface.cpp  dx_iface.h
src/: drw_base.h  drw_classes.h  drw_entities.cpp  drw_entities.h  drw_interface.h  drw_objects.h  libdwgr.cpp  libdwgr.h  libdxfrw.cpp  libdxfrw.h
src/intern/: dxfreader.cpp  dxfreader.h  dxfwriter.cpp  dxfwriter.h  rscodec.cpp
tests/: CMakeLists.txt  ConverterTest.cpp  test-starter.cpp
tests/data/: SOT23_Stacks_2D_CC_Full.dxf
tests/lib/googletest/googletest/: CMakeLists.txt
